# birl_baxter_marker_vision

./: CMakeLists.txt  README.md  demo.launch  package.xml
demo/: demo.py  wiki  wiki~
launch/: aruco_setup.launch  baxter_base_camera.launch  baxter_left_hand_camera.launch  baxter_right_hand_camera.launch  baxter_top_camera.launch  demo.launch  ur3_xtion_camera.launch
rviz/: baxter_camera_link.config.rviz
scripts/: get_pose_from_base_camera.py  get_pose_from_base_camera.py~  get_pose_from_l_hand_camera.py  get_pose_from_r_hand_camera.py  get_pose_from_top_camera.py  plot_pose.py
srv/: get_pose.srv  get_pose.srv~
test/: test_camera.py  test_persistent_client.py  test_persistent_service.py
